完善服务器管理的基本逻辑
